--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,17 @@
     <string name="app_name">life-tqueremos</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+
+    <!--activity_login-->
+    <string name="login_bienvenido">Bienvenido</string>
+    <string name="login_datos">Introduce tu correo y contraseña</string>
+    <string name="login_mail">E-mail</string>
+    <string name="login_password">Contraseña</string>
+    <string name="login_acceder">Acceder</string>
+    <string name="login_registrar">¿Eres nuevo aquí? Registrate</string>
+
+    <!--activity_signup-->
+    <string name="signup_registrar">Registrar</string>
+    <string name="signup_yaregistrado">¿Ya eres miembro? Ingresa</string>
+    <string name="signup_nombre">Nombre</string>
 </resources>
