--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="login_password">Contraseña</string>
     <string name="login_acceder">Acceder</string>
     <string name="login_registrar">¿Eres nuevo aquí? Registrate</string>
+    <string name="login_forgotPassword">Olvide mi contraseña</string>
 
     <!--activity_signup-->
     <string name="signup_registrar">Registrar</string>
