--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
 
     <!--activity_forgotpassword-->
     <string name="forgotpassword_regresar">Regresar</string>
+    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
 </resources>
