--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <!--activity_forgotpassword-->
     <string name="forgotpassword_regresar">Regresar</string>
     <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
